structural hell achieved

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.16)
-project(graphs)
+project(graphs_demo)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(graphs main.cpp)
+add_subdirectory(src/graph)
+
+add_executable(graphs_demo main.cpp)
+
+target_link_libraries(graphs_demo graph)
