moved test - to be rewritten in junit

--- a/src/graph/matrix/CMakeLists.txt
+++ b/src/graph/matrix/CMakeLists.txt
@@ -8,3 +8,13 @@ add_library(sparseMatrix STATIC Matrix.hpp sparseMatrix.cpp Iterator.cpp Proxy.c
 
 target_link_libraries(denseMatrix)
 target_link_libraries(sparseMatrix)
+
+#find_package(CxxTest)
+#if(CXXTEST_FOUND)
+#    message("about to test")
+#    include_directories(${CXXTEST_INCLUDE_DIR})
+#    enable_testing()
+#    CXXTEST_ADD_TEST(unittest_foo matr_tests.cc
+#            ${CMAKE_CURRENT_SOURCE_DIR}/matr_tests.h)
+#    target_link_libraries(unittest_foo foo) # as needed
+#endif()
